# stanobj

./: .gitignore  README.md  SKILL.md  pyproject.toml
.claude-plugin/: plugin.json
docs/superpowers/plans/: 2026-03-25-stanobj.md
docs/superpowers/specs/: 2026-03-25-stanobj-design.md
examples/: sample-report.json
hooks/: hooks.json  post_stanobj_success.py
references/: canonical-schema.md  decision-points.md
scripts/: detection.py  report.py  standardize.py  stanobj.py  validation.py
scripts/readers/: base.py  csv_reader.py  h5_reader.py  h5ad_reader.py  loom_reader.py  mtx_reader.py  r_bridge.py
skills/stanobj/: SKILL.md
skills/stanobj/references/: format-guide.md
skills/stanobj/scripts/: __init__.py  detection.py  report.py  standardize.py  utils.py
skills/stanobj/scripts/readers/: __init__.py  csv_reader.py  h5ad_reader.py  r_bridge.py  sce_reader.R  seurat_reader.R
tests/: conftest.py  test_archive_safety.py  test_bug_fixes.py  test_compression.py  test_csv_reader.py  test_design_broadcast.py  test_detection.py  test_h5_reader.py  test_h5ad_reader.py  test_loom_reader.py  test_mtx_reader.py  test_orchestrator.py  test_r_bridge_helpers.py  test_r_readers.py  test_report.py  test_standardize.py  test_utils.py  test_validation.py
